DuPont DevSB/src/objects/ccrz__E_CategorySpec__c.object
<CustomObject>
    <description>Assigns a Spec to a Category and gives it a value. All children Categories and Products inherit the Specs assigned to a Category.</description>
    <fields>
        <fullName>ccrz__CategorySpecId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Category Spec Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Category Specs</relationshipLabel>
        <relationshipName>Category_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <label>SpecValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Category Specs</relationshipLabel>
        <relationshipName>Category_Specs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Category Spec</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Category Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Category Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>